# strava_local_coach

./: .gitignore  .mcp.json  EXAMPLES.md  README.md
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
scripts/: strava_login.py
server/: _run.sh  pyproject.toml  store.py  strava_client.py  strava_server.py  sync.py  ui.py  vdot.py
skills/strava-analysis/: SKILL.md
skills/strava-race-feedback/: SKILL.md
skills/strava-race-predictor/: SKILL.md
skills/strava-race-specific-plan/: SKILL.md
skills/strava-run-feedback/: SKILL.md
skills/strava-training-plan-create/: SKILL.md
